Refactor void part methods in 2024